# geocaptcha-shillelagh

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: labeler.yml  release.yml
.github/workflows/: README.md  code-quality.yml
docs/: FAQ.md  RETEX_genericjsonapi.md
docs/developper/: Doc_commit.md
src/geocaptcha_shillelagh/: __init__.py  adapter.py  cuser.py  kingpin.py  session.py  utils.py
tests/: test_adapter.py
